--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/status-bar": "4.1.1",
     "@ionic/vue": "^6.0.0",
     "@ionic/vue-router": "^6.0.0",
+    "@supabase/supabase-js": "^2.45.3",
     "core-js": "^3.6.5",
     "openai": "^4.57.0",
     "pinia": "^2.0.11",
