--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@ionic/vue-router": "^6.0.0",
     "@supabase/supabase-js": "^2.45.3",
     "core-js": "^3.6.5",
+    "deno": "^0.1.1",
     "openai": "^4.57.0",
     "pinia": "^2.0.11",
     "vue": "^3.2.21",
