--- a/package.json
+++ b/package.json
@@ -7,31 +7,24 @@
     "build": "vue-cli-service build",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "eslint --ext .js,.vue,.ts src"
+    "lint": "eslint --ext .js,.vue,.ts src",
+    "lint:fix": "eslint --ext .js,.vue,.ts src --fix"
   },
   "dependencies": {
-    "@capacitor/app": "4.1.1",
-    "@capacitor/core": "4.6.1",
-    "@capacitor/haptics": "4.1.0",
-    "@capacitor/keyboard": "4.1.0",
-    "@capacitor/status-bar": "4.1.1",
-    "@ionic/vue": "^6.0.0",
-    "@ionic/vue-router": "^6.0.0",
+    "@headlessui/vue": "^1.7.14",
     "@supabase/supabase-js": "^2.45.3",
     "core-js": "^3.6.5",
-    "deno": "^0.1.1",
+    "lucide-vue-next": "^0.439.0",
     "openai": "^4.57.0",
     "pinia": "^2.0.11",
     "vue": "^3.2.21",
     "vue-router": "^4.0.12"
   },
   "devDependencies": {
-    "@capacitor/cli": "4.6.1",
     "@types/jest": "^27.0.3",
     "@types/node": "^18.15.11",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
-    "@vitejs/plugin-vue": "^2.3.3",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-e2e-cypress": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
@@ -42,11 +35,13 @@
     "@vue/eslint-config-typescript": "^11.0.0",
     "@vue/test-utils": "^2.0.0",
     "@vue/vue3-jest": "^27.0.0-alpha.1",
+    "autoprefixer": "^10.4.14",
     "eslint": "^8.4.1",
     "eslint-plugin-vue": "^9.27.0",
     "jest": "^27.3.1",
-    "typescript": "~4.9.5",
-    "vite": "^2.9.13"
+    "postcss": "^8.4.24",
+    "tailwindcss": "^3.3.2",
+    "typescript": "~4.9.5"
   },
-  "description": "An Ionic project"
+  "description": "An AI Interview Assistant"
 }
